internal/contexts/optimization/formatter/testdata/corpus/gradle.build.txt
Starting a Gradle Daemon (subsequent builds will be faster)
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:compileDebugAidl NO-SOURCE
> Task :app:generateDebugResValues
> Task :app:processDebugResources
> Task :app:compileDebugJavaWithJavac FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler error output for details.

* Where:
Build file '/home/user/app/build.gradle' line: 42

src/main/java/com/example/MainActivity.java:28: error: cannot find symbol
        setContentView(R.layout.activity_main);
                                ^
Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

BUILD FAILED in 6s
5 actionable tasks: 4 executed, 1 up-to-date
